--- a/static/style.css
+++ b/static/style.css
@@ -36,7 +36,7 @@ textarea[name=input_text]{
   font-size: 0.95em;
 }
 
-pre.error{
+.error{
   color: red;
   font-weight: 900;
   font-size: 1.5em;
@@ -50,7 +50,7 @@ p{
   width:90%;
 }
 
-p.over{
+.over{
   color: red;
 }
 
