Modify files to reflect name change

--- a/sentencecow/templates/error.html
+++ b/sentencecow/templates/error.html
@@ -15,6 +15,6 @@
   <br>
   <br>
 
-  <a href="http://localhost:5000/leguinncounter">Return to main page</a>
+  <a href="sentencecow">Return to main page</a>
 
 {% endblock %}
