--- a/sentencecow/templates/form.html
+++ b/sentencecow/templates/form.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-  <h1>Welcome to Le Guin Sentence Word Counter!</h1>
+  <h1>Welcome to Sentence Cow!</h1>
 
   <p>This program extracts sentences from a text and counts the number of words
     in each sentence, <i>as best as possible.</i> Any string of alphanumeric
@@ -26,7 +26,7 @@
      Click 'Count' to see how your sentences measure up!</p>
 
 
-  <form id="lgcform" action="/leguincounter" method="POST">
+  <form id="countform" action="/sentencecow" method="POST">
 
     <div>
       <!-- Display message if input text over word count; user should
