--- a/sentencecow/templates/layout.html
+++ b/sentencecow/templates/layout.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Le Guin Word Counter</title>
+  <title>Sentence Cow: sentence extractor and word counter</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 
