Add emoji to header

--- a/sentencecow/templates/form.html
+++ b/sentencecow/templates/form.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-  <h1>Welcome to Sentence Cow!</h1>
+  <h1>Welcome to Sentence Cow! 🐄</h1>
 
   <p>This program extracts sentences from a text and counts the number of words
     in each sentence, <i>as best as possible.</i> Any string of alphanumeric
