--- a/sentencecow/templates/layout.html
+++ b/sentencecow/templates/layout.html
@@ -8,6 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sentence Cow: sentence extractor and word counter</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <!-- Favicon -->
+        <!-- Source: Twemoji project via favicon.io: https://favicon.io/emoji-favicons/cow -->
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+        <link rel="apple-touch-icon" sizes="180x180" 
+              href="{{ url_for('static', filename='img/apple-touch-icon.png') }}">
 </head>
 
 <body>
