Add author and description meta tags

--- a/sentencecow/templates/layout.html
+++ b/sentencecow/templates/layout.html
@@ -6,7 +6,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="dunnesquared">
+  <meta name="description" content="A Flask-based web application that extracts sentences from 
+  a text and counts the number of words in each sentence, as best as possible.">
+
   <title>Sentence Cow: sentence extractor and word counter</title>
+  
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <!-- Favicon -->
         <!-- Source: Twemoji project via favicon.io: https://favicon.io/emoji-favicons/cow -->
